docs/EBNF/draft_2021-01-03.ebnf
(* Draft v0.0.1-20210103 *)
TranslationUnit = { ImportDeclaration } , { { Attribute } , [ "export" , ["default"] ] , ConstDeclaration };
Attribute = "[" , Identifier , "]";
ConstDeclaration = "const" , DeclarationBody;
LetDeclaration = "let" , DeclarationBody;
DeclarationBody = Identifier , "=" , Expression , ";";
Expression = Literal | CallExpression | FunctionExpression;
CallExpression = Identifier , { "." Identifier } Args;
Args = "(" , [ { Expression , "," } , Expression ] ")";
FunctionExpression = "(" , ")" , "=>" , CompoundExpression;
ExpressionStatement = Expression , ";";
CompoundExpression = "{" , { ExpressionStatement } , [ Expression ] , "}";
Literal = Number | DoubleQuotesString | SingleQuotesString;
NamedImportDeclaration = "import" , "{" , Identifier , { "," , Identifier } , "}" , "from" (DoubleQuotesString | SingleQuotesString);
DefaultImportDeclaration = "import" Identifier "from" (DoubleQuotesString | SingleQuotesString);
ImportDeclaration = NamedImportDeclaration | DefaultImportDeclaration;
